apps/production/httpbin-mesh/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kuma.io/sidecar-injection: enabled
  name: httpbin-mesh
