apps/production/httpbin-mesh/policy-inject-mesh-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-mesh-label
  annotations:
    policies.kyverno.io/title: inject tag mesh-lq-wkld=datamesh on deployment
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Deployment
    kyverno.io/kyverno-version: 1.7.0
    policies.kyverno.io/minversion: 1.7.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/description: >-
      If Secrets are mounted in ways which do not naturally allow updates to
      be live refreshed it may be necessary to modify a Deployment. This policy
      watches a Secret and if it changes will write an annotation
      to one or more target Deployments thus triggering a new rollout and thereby
      refreshing the referred Secret. It may be necessary to grant additional privileges
      to the Kyverno ServiceAccount, via one of the existing ClusterRoleBindings or a new
      one, so it can modify Deployments.      
spec:
  mutateExistingOnPolicyUpdate: false
  rules:
  - name: inject-label-for-mesh
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - httpbin-mesh
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            mesh-lq-wkld: "datamesh"
